# hermes-eeg-plugin

./: LICENSE  README.md  plugin.yaml  pyproject.toml
.github/workflows/: publish.yml
hermes_eeg/: __init__.py
tests/: test_handlers.py  test_plugin_registration.py  test_processing.py
